# src/routes.ts
@@ -9,7 +9,8 @@ const router = Router();
 const analyzeController = new ContractAnalysis();
 const descriptionController = new ContractDescription();
 
-router.post('/contract/analyze', contractAndChain, analyzeController.analyzeContract);
+router.post('/contract/analyze', contractAndChain, analyzeController.contractAnalysis);
 router.post('/contract/description', contractAndChain, descriptionController.getContractDescription);
+router.post('/contract/info', contractAndChain, analyzeController.contractInfo);
 
 export default router;
